[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pystk2"
version = "0.0.1"
description="Python bindings for SuperTuxKart"
readme = "README.md"
authors = [
  { name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.scikit-build]
cmake.args = ["-DBUILD_RECORDER=0", "-DCHECK_ASSETS=off", "-DUSE_WIIUSE=off", "-DUSE_CRYPTO_OPENSSL=off", "-DUSE_SQLITE3=off"]

[tool.cibuildwheel.linux]
# Ubuntu: apt-get install -y cmake build-essential libogg-dev libvorbis-dev libopenal-dev libsdl2-dev libsdl2-image-dev libfreetype6-dev libraqm-dev libcurl4-openssl-dev libglew-dev libharfbuzz-dev libfribidi-dev libglm-dev zlib1g-dev
before-all = "apt-get install build-essential cmake libbluetooth-dev libsdl2-dev libcurl4-openssl-dev libenet-dev libfreetype6-dev libharfbuzz-dev libjpeg-dev libogg-dev libopenal-dev libpng-dev libssl-dev libvorbis-dev libmbedtls-dev pkg-config zlib1g-dev"